# ai-stock-prediction

./: app.py  auth.py  data_loader.py  database.py  db_migrate.py  db_service.py  portfolio.py  prediction_models.py  pyproject.toml  technical_indicators.py  utils.py  visualizations.py
attached_assets/: Pasted-File-home-runner-workspace-pythonlibs-lib-python3-11-site-packages-streamlit-runtime-scriptrunner-1743436019699.txt  Pasted-sqlalchemy-exc-ProgrammingError-psycopg2-errors-UndefinedColumn-column-users-password-hash-does-n-1743435046763.txt
