[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "prophet>=1.1.6",
    "psycopg2-binary>=2.9.10",
    "pytz>=2025.2",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.40",
    "statsmodels>=0.14.4",
    "streamlit>=1.44.0",
    "tensorflow>=2.14.0",
    "yfinance>=0.2.55",
]
